# DZ_31

./: README.md  manage.py  pyproject.toml  requirements.txt
ads/: admin.py  asgi.py  models.py  permissions.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug_alter_ad_description_and_more.py
datasets/: users_user.csv
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selections/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_locations.py  0003_user_birth_date_alter_user_email.py
